package enums;

/**
 * Represents predefined categories for transactions.
 * Categories are used to classify and organize spending or income types.
 */
public enum Category {
    /** Expenses or income related to food and dining. */
    FOOD,

    /** Expenses or income related to education, such as tuition or courses. */
    EDUCATION,

    /** Expenses or income related to transport, including public transport or fuel. */
    TRANSPORT,

    /** Expenses related to non-essential purchases such as clothing or gadgets. */
    SHOPPING,

    /** Expenses related to entertainment activities like movies, games, or outings. */
    ENTERTAINMENT,

    /** Expenses related to medical and health services. */
    HEALTHCARE,

    /** Expenses related to housing such as rent or utilities. */
    HOUSING,

    /** Expenses that do not fall into other predefined categories. */
    OTHER,

    /** Expenses specifically for groceries and daily necessities. */
    GROCERIES,

    /** Alternate or overlapping category for health-related spending. */
    HEALTH
}

