package enums;

/**
 * Represents the priority level of a transaction.
 * Priority can be used to indicate the urgency or importance of a transaction.
 */
//@@author Lukapeng77
public enum Priority {
    /** High priority transactions, typically urgent or essential. */
    HIGH,

    /** Medium priority transactions, moderately important but not urgent. */
    MEDIUM,

    /** Low priority transactions, less critical or optional. */
    LOW
}
